force-app/main/default/objects/CTRConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CreditRating__c</fullName>
        <label>CreditRating</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EmailService__c</fullName>
        <label>EmailService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HerokuDomain__c</fullName>
        <label>Heroku Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Heroku_Authen_Endpoint__c</fullName>
        <label>Heroku Authen Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NonSAPCustomerRunningNumber__c</fullName>
        <label>Non-SAP Customer Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonSAPShipToRunningNumber__c</fullName>
        <label>Non-SAP Ship-To Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonSAPSupplierRunningNumber__c</fullName>
        <label>Non-SAP Supplier Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgWideEmailAddress__c</fullName>
        <label>OrgWideEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RemindDate__c</fullName>
        <label>Remind Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunningNumber__c</fullName>
        <label>Running Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CTRConfig</label>
</CustomObject>